--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -636,7 +636,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
                 p_{1*}(\pi_1(R_1,r_1)) &= (p_2\circ \phi)_*(\pi_1(R_1, r_1)) = \\
                 &= p_{2*}(\phi_*(\pi_1(R_1,r_1))) = p_{2*}(\pi_1(R_2, r_2))
             \end{align*}
-            ya que como $\phi$ es un homeomorfismo tenemos que $\phi_*(\pi_1(R_1,r_1)) = \pi_1(R_2, \phi(r_1))$.
+            ya que como $\phi$ es un homomorfismo tenemos que $\phi_*(\pi_1(R_1,r_1)) = \pi_1(R_2, \phi(r_1))$.
 
             \item[$\Leftarrow$)] Está probada aplicando el corolario anterior.
         \end{itemize}
