--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -477,7 +477,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \end{gather*}
         O equivalentemente $\phi$ es un levantamiento de la aplicación continua $p_1$ usando la aplicación recubridora $p_2$.
 
-        \item Un \textbf{isomorfismo de recubridores} $\phi$ de $(R_1,p_1)$ es $(R_2,p_2)$ es un homomorfismo $\phi:R_1 \to R_2$ tal que $p_2 \circ \phi = p_1$.
+        \item Un \textbf{isomorfismo de recubridores} $\phi$ de $(R_1,p_1)$ es $(R_2,p_2)$ es un homeomorfismo $\phi:R_1 \to R_2$ tal que $p_2 \circ \phi = p_1$.
 
         \item Un isomorfismo $\phi$ de $(R_1,p_1)$ es sí mismo se le llama \textbf{automorfismo de recubridores}. Al conjunto de todos los automorfismos lo notaremos por $\cc{A}(R_1,p_1)$.
     \end{enumerate}
@@ -639,7 +639,135 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             ya que como $\phi$ es un homomorfismo tenemos que $\phi_*(\pi_1(R_1,r_1)) = \pi_1(R_2, \phi(r_1))$.
 
             \item[$\Leftarrow$)] Está probada aplicando el corolario anterior.
-        \end{itemize} 
-        
+        \end{itemize}
     \end{proof}
 \end{teo}
+
+\begin{observacion}
+    Algunas consecuencias que podemos extraer de lo anterior son las siguientes:\\
+
+    Sean $B$ un e.t. y $b_0\in B$. Si consideramos $H$ un subgrupo de $\pi_1(B,b_0)$ entonces
+    \begin{enumerate}
+        \item existe a lo más (salvo isomorfismos) un recubridor $(R,p)$ cumpliendo que existe un recubridor $(R,p)$ cumpliendo que existe un punto $r\in R$ tal que $p_*(\pi_1(R,r)) = H$.
+        \begin{gather*}
+            \xymatrix{
+                R \ar[d]_p & \pi_1(R,r)\ar[d]_{p_*}\\
+                B & H \leq \pi_1(B,b_0)
+            }
+        \end{gather*}
+        
+        \item Además si $H$ y $H'$ son conjugados en $\pi_1(B,b_0)$ a lo más existe un recubridor correspondiente a ambos, es decir, si $(R,p)$ es un recubridor con $r_0\in R$ tal que $p_*(\pi_1(R,r_0)) = H$, entonces también existe un $r_0'\in R$ tal que $p_*(\pi_1(R,r_0'))=H'$.
+        \begin{gather*}
+            \xymatrix{
+                R \ar[d]_p & \pi_1(R,r)\ar[d]_{p_*} & \pi_1(R,r') \ar[d]\\
+                B & H \leq \pi_1(B,b_0) & H'\leq \pi_1(B,b_0)
+            }
+        \end{gather*}
+    \end{enumerate}
+\end{observacion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item Consideramos $B=\bb{R}$ y buscamos los recubridores de $\bb{R}$. Tenemos que 
+        \begin{gather*}
+            \pi_1(\bb{R},0) = \{[\veps_0]\}
+        \end{gather*}
+        Solo hay un subgrupo $H$. Entonces $\bb{R}$ solo tiene un recubridor
+        \begin{gather*}
+            (\bb{R}, p\in Id_{\bb{R}})
+        \end{gather*}
+
+        \item En general, si $B$ es simplemente conexo, entonces su único recubridor es él mismo (salvo isomorfismo de recubridores).
+        
+        \item Consideramos ahora $\bb{R}\bb{P}^2$ el espacio proyectivo con $n\geq 2$. Tenemos que
+        \begin{gather*}
+            \pi_1(\bb{R}\bb{P}^n, x_0) \cong \bb{Z}_2, \text{ con } x_0\in \bb{R}\bb{P}^n \text{ cualquiera}
+        \end{gather*}
+        Por tanto tendríamos que los únicos posibles subgrupos de $\pi_1(\bb{R}\bb{P}^n, x_0)$ son
+        \begin{gather*}
+            H_1 = \{[\veps_{x_0}]\} \to \text{ Recubridor asociado } (\bb{S}^n, p) : p(x)=[x]\\
+            H_2 \cong \bb{Z}_2 \to \text{ Recubridor asociado } (\bb{R}\bb{P}^n, Id_{\bb{R}\bb{P}^n})
+        \end{gather*}
+        \begin{gather*}
+            \xymatrix{
+                R \ar[d]_p & r_0 \ar[d] & \{0\} \ar[d] & \bb{R}\bb{P}^n \ar[d]_{Id} & x_0 \ar[d]_{Id} & \pi_1(\bb{R}\bb{P}^n, x_0) \ar[d]^{Id_*}\\
+                \bb{R}\bb{P}^n & x_0  & \{0\} & \bb{R}\bb{P}^n & x_0 & \pi_1(\bb{R}\bb{P}^n, x_0)
+            }
+        \end{gather*}
+        por lo que los únicos recubridores de $\bb{R}\bb{P}^2$ son $(\bb{S}^n, p)$ con $p(x)=[x]$ y $(\bb{R}\bb{P}^n, Id_{\bb{R}\bb{P}^n})$.
+
+        \item Consideramos $B=\bb{S}^1$. Recordemos que 
+        \begin{gather*}
+            \pi_1(\bb{S}^1, (1,0)) \cong \bb{Z}\\
+            \pi_1(\bb{S}^1, (1,0)) = \{[\alpha]^n : \alpha(t) = (\cos(2\pi t), \sen(2\pi t)),\ n\in \bb{Z}\}
+        \end{gather*}
+        Los únicos subgrupos de $\bb{Z}$ son 
+        \begin{gather*}
+            H_k \cong k\bb{Z} \text{ donde } H_k = \{[\alpha]^{nk} : n\in \bb{Z}\} \text{ con } k\in \bb{Z}^+\\
+            H_0 \cong \{0\}
+        \end{gather*}
+        Para el recubridor $(\bb{R}, p)$ donde $p(x) = (\cos(2\pi t), \sen(2\pi t))$, su subgrupo asociado en $\pi_1(\bb{S}^1, (1,0))$ es $H_0$.\\
+
+        También podemos considerar el recubridor $(\bb{S}, p_1=Id_{\bb{S}^1})$ cuyo subgrupo asociado es $H_1 = \pi_1(\bb{S}^1, (1,0))$.\\
+
+        Extendemos ahora la aplicación $p_k$ para $k\geq 2$ dada por 
+        \begin{align*}
+            p_k : \bb{S}^1 &\to \bb{S}^1\\
+            (\cos(\theta), \sen(\theta)) & \mapsto (\cos(k\theta), \sen(k\theta))
+        \end{align*}
+        Además tendríamos que 
+        \begin{align*}
+            p_{k*}: \pi_1(\bb{S}^1, (1,0)) &\to \pi_1(\bb{S}^1, (1,0))\\
+            [\alpha] & \mapsto [\alpha]^k 
+        \end{align*}
+        Llegando a que 
+        \begin{gather*}
+            p_{k*}(\pi_1(\bb{S}^1, (1,0))) = H_k = \{[\alpha]^{kn} : n\in \bb{Z}\}
+        \end{gather*}
+        y ya tendríamos calculados todos los recubridores de $\bb{S}^1$.
+
+        \item Vamos a estudiar ahora el cilindro de $\bb{R}^3$, $B=\bb{S}\times \bb{R}$. Conocemos el recubridor
+        \begin{gather*}
+            \pi_1(\bb{S}\times \bb{R}, (1,0,0)) = \{[\alpha]^n : n\in \bb{Z}\} \cong \bb{Z}
+        \end{gather*}
+        \begin{align*}
+            p_0 : \bb{R}^2 &\to \bb{S}\times \bb{R}\\
+            (x,y) & \mapsto (\cos(2\pi x), \sen(2\pi x), y)
+        \end{align*}
+        asociado a $H_0=\{[\veps_{(1,0,0)}]\}$.\\
+
+        Buscamos igual que antes la función $p_k$ para $k\in \bb{Z}^+$ dada por 
+        \begin{align*}
+            p_k : \bb{S}^1 \times \bb{R} &\to \bb{S}^1 \times \bb{R}\\
+            (\cos(\theta), \sen(\theta), y) &\mapsto (\cos(k\theta), \sen(k\theta), y)
+        \end{align*}
+        Al igual que en el ejemplo anterior tenemos que 
+        \begin{gather*}
+            p_{k*}([\alpha]) = [\alpha]^k\\
+            p_{k*}(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,0))) = \{[\alpha]^{kn} : n\in \bb{Z}\} = H_k
+        \end{gather*}
+
+        \item Veamos el caso del toro, $B=\bb{S}^1 \times \bb{S}^1$. Sabemos que 
+        \begin{gather*}
+            \pi_1(\bb{S}\times \bb{S}, (1,0,1,0)) \cong \bb{Z}\times \bb{Z}
+        \end{gather*}
+        con generadores $[\alpha]$ y $[\beta]$.\\
+
+        Consideramos el recubridor $(\bb{R}^2, p_0\times p_0)$ con 
+        \begin{align*}
+            p_0\times p_0 : \bb{R}\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
+            (x,y) & \mapsto (cos(2\pi x), \sen(2\pi x), \cos(2\pi y), \sen(2\pi y))
+        \end{align*}
+        que tiene asociado al subgrupo trivial.\\
+
+        Consideramos ahora el cilindro como recubridor y definimos la aplicación recubridora
+        \begin{align*}
+            p_k\times p_0 : \bb{S}\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
+            (\cos(\theta), \sen(\theta), y) & \mapsto (cos(k\theta), \sen(k\theta), \cos(2\pi y), \sen(2\pi y))
+        \end{align*}
+        que para cada $k\in \bb{Z}^+$ ``enrolla'' el cilindro $k$ veces. Es fácil ver que con esta definición tenemos que 
+        \begin{gather*}
+            (p_k \times p_0)_*([\gamma]) = [\alpha]^k \cong k\bb{Z}\times \{0\} = \{(kn,0) : n\in \bb{Z}\}
+        \end{gather*}
+    \end{enumerate}
+\end{ejemplo}
