--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -648,7 +648,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
 
     Sean $B$ un e.t. y $b_0\in B$. Si consideramos $H$ un subgrupo de $\pi_1(B,b_0)$ entonces
     \begin{enumerate}
-        \item existe a lo más (salvo isomorfismos) un recubridor $(R,p)$ cumpliendo que existe un recubridor $(R,p)$ cumpliendo que existe un punto $r\in R$ tal que $p_*(\pi_1(R,r)) = H$.
+        \item Existe como mucho un recubridor $(R,p)$ (salvo isomorfismo) cumpliendo que $\exists r\in R$ tal que $p_*(\pi_1(R,r)) = H$.
         \begin{gather*}
             \xymatrix{
                 R \ar[d]_p & \pi_1(R,r)\ar[d]_{p_*}\\
@@ -656,10 +656,10 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             }
         \end{gather*}
         
-        \item Además si $H$ y $H'$ son conjugados en $\pi_1(B,b_0)$ a lo más existe un recubridor correspondiente a ambos, es decir, si $(R,p)$ es un recubridor con $r_0\in R$ tal que $p_*(\pi_1(R,r_0)) = H$, entonces también existe un $r_0'\in R$ tal que $p_*(\pi_1(R,r_0'))=H'$.
+        \item Además si $H$ y $H'$ son subgrupos conjugados en $\pi_1(B,b_0)$, como mucho existe un recubridor correspondiente a ambos, es decir, si $(R,p)$ es un recubridor con $r_0\in R$ tal que $p_*(\pi_1(R,r_0)) = H$, entonces también existe un $r_0'\in R$ tal que $p_*(\pi_1(R,r_0'))=H'$.
         \begin{gather*}
             \xymatrix{
-                R \ar[d]_p & \pi_1(R,r)\ar[d]_{p_*} & \pi_1(R,r') \ar[d]\\
+                R \ar[d]_p & \pi_1(R,r)\ar[d]_{p_*} & \pi_1(R,r') \ar[d]_{p_*}\\
                 B & H \leq \pi_1(B,b_0) & H'\leq \pi_1(B,b_0)
             }
         \end{gather*}
@@ -672,25 +672,25 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \begin{gather*}
             \pi_1(\bb{R},0) = \{[\veps_0]\}
         \end{gather*}
-        Solo hay un subgrupo $H$. Entonces $\bb{R}$ solo tiene un recubridor
+        Por lo que solo hay un subgrupo $H=\{[\veps_0]\}$, luego $\bb{R}$ solo tiene un recubridor
         \begin{gather*}
-            (\bb{R}, p\in Id_{\bb{R}})
+            (\bb{R}, p= Id_{\bb{R}})
         \end{gather*}
 
         \item En general, si $B$ es simplemente conexo, entonces su único recubridor es él mismo (salvo isomorfismo de recubridores).
         
-        \item Consideramos ahora $\bb{R}\bb{P}^2$ el espacio proyectivo con $n\geq 2$. Tenemos que
+        \item Consideramos ahora $\bb{R}\bb{P}^n$ el espacio proyectivo con $n\geq 2$. Tenemos que
         \begin{gather*}
             \pi_1(\bb{R}\bb{P}^n, x_0) \cong \bb{Z}_2, \text{ con } x_0\in \bb{R}\bb{P}^n \text{ cualquiera}
         \end{gather*}
         Por tanto tendríamos que los únicos posibles subgrupos de $\pi_1(\bb{R}\bb{P}^n, x_0)$ son
         \begin{gather*}
-            H_1 = \{[\veps_{x_0}]\} \to \text{ Recubridor asociado } (\bb{S}^n, p) : p(x)=[x]\\
+            H_1 = \{[\veps_{x_0}]\} \to \text{ Recubridor asociado } (\bb{S}^n, p) \text{ con } p(x)=[x]\\
             H_2 \cong \bb{Z}_2 \to \text{ Recubridor asociado } (\bb{R}\bb{P}^n, Id_{\bb{R}\bb{P}^n})
         \end{gather*}
         \begin{gather*}
             \xymatrix{
-                R \ar[d]_p & r_0 \ar[d] & \{0\} \ar[d] & \bb{R}\bb{P}^n \ar[d]_{Id} & x_0 \ar[d]_{Id} & \pi_1(\bb{R}\bb{P}^n, x_0) \ar[d]^{Id_*}\\
+                R \ar[d]_p & r_0 \ar@{|->}[d] & \{0\} \ar@{|->}[d] & \bb{R}\bb{P}^n \ar[d]_{Id} & x_0 \ar@{|->}[d]_{Id} & \pi_1(\bb{R}\bb{P}^n, x_0) \ar[d]^{Id_*}\\
                 \bb{R}\bb{P}^n & x_0  & \{0\} & \bb{R}\bb{P}^n & x_0 & \pi_1(\bb{R}\bb{P}^n, x_0)
             }
         \end{gather*}
@@ -698,19 +698,45 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
 
         \item Consideramos $B=\bb{S}^1$. Recordemos que 
         \begin{gather*}
-            \pi_1(\bb{S}^1, (1,0)) \cong \bb{Z}\\
-            \pi_1(\bb{S}^1, (1,0)) = \{[\alpha]^n : \alpha(t) = (\cos(2\pi t), \sen(2\pi t)),\ n\in \bb{Z}\}
+            \pi_1(\bb{S}^1, (1,0)) = \{[\alpha]^n : \alpha(t) = (\cos(2\pi t), \sen(2\pi t)),\ n\in \bb{Z}\} \cong \bb{Z}
         \end{gather*}
         Los únicos subgrupos de $\bb{Z}$ son 
         \begin{gather*}
             H_k \cong k\bb{Z} \text{ donde } H_k = \{[\alpha]^{nk} : n\in \bb{Z}\} \text{ con } k\in \bb{Z}^+\\
             H_0 \cong \{0\}
         \end{gather*}
-        Para el recubridor $(\bb{R}, p)$ donde $p(x) = (\cos(2\pi t), \sen(2\pi t))$, su subgrupo asociado en $\pi_1(\bb{S}^1, (1,0))$ es $H_0$.\\
+
+        Recordamos el recubrimiento de $\bb{S}^1$ que estudiamos en el tema anterior:
+
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}{scale=0.7}
+                \shorthandoff{>}
+                % Recta
+                \draw[line width=1pt] (-3,3) -- (3,3);
+                \node at (4,3) {$R = \bb{R}$};
+
+                % Puntos
+                \node[draw, circle, fill=black, inner sep=1pt, label=below:$-1$] at (-2,3) {};
+                \node[draw, circle, fill=black, inner sep=1pt, label=below:$0$] at (0,3) {};
+                \node[draw, circle, fill=black, inner sep=1pt, label=below:$1$] at (2,3) {};
+
+                % Flecha función
+                \draw[line width=0.8pt,->] (0,2) -- (0,1);
+                \node[anchor=west] at (0.5,1.5) {$p(t) = (\cos(2\pi t), \sen(2\pi t))$};
+
+                % Circunferencia
+                \draw[thick] (0,-1) circle [radius=1.5];
+                \node[anchor=west] at (1.7,0) {$B=\bb{S}^1$};
+                \node[draw, circle, fill=black, inner sep=1pt, label=right:{$(1,0)$}] at (1.5,-1) {};
+
+            \end{tikzpicture}%
+        \end{figure}%
+        Para este recubridor $(\bb{R}, p)$ donde $p(t) = (\cos(2\pi t), \sen(2\pi t))$, su subgrupo asociado en $\pi_1(\bb{S}^1, (1,0))$ es $H_0$.\\
 
         También podemos considerar el recubridor $(\bb{S}, p_1=Id_{\bb{S}^1})$ cuyo subgrupo asociado es $H_1 = \pi_1(\bb{S}^1, (1,0))$.\\
 
-        Extendemos ahora la aplicación $p_k$ para $k\geq 2$ dada por 
+        Ahora nos planteamos de nuevo que $\bb{S}^1$ es recubridor de sí mismo pero que hay más formas de recubrirse, es decir, podemos encontrar funciones recubridoras $p_k$ con $k\in \bb{Z}^+$ de forma que todas recubran a la circunferencia pero ``enrollandola más'', es decir, llevando cada vuelta de $R=\bb{S}^1$ en $k$ vueltas de $B=\bb{S}^1$. Definimos así la aplicación $p_k$ para $k\geq 2$ (el caso $k=1$ es la identidad que ya se ha estudiado) dada por 
         \begin{align*}
             p_k : \bb{S}^1 &\to \bb{S}^1\\
             (\cos(\theta), \sen(\theta)) & \mapsto (\cos(k\theta), \sen(k\theta))
@@ -724,19 +750,29 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \begin{gather*}
             p_{k*}(\pi_1(\bb{S}^1, (1,0))) = H_k = \{[\alpha]^{kn} : n\in \bb{Z}\}
         \end{gather*}
-        y ya tendríamos calculados todos los recubridores de $\bb{S}^1$.
-
-        \item Vamos a estudiar ahora el cilindro de $\bb{R}^3$, $B=\bb{S}\times \bb{R}$. Conocemos el recubridor
+        Por tanto, los únicos recubridores de $\bb{S}^1$ son
         \begin{gather*}
-            \pi_1(\bb{S}\times \bb{R}, (1,0,0)) = \{[\alpha]^n : n\in \bb{Z}\} \cong \bb{Z}
+            (\bb{R}, p)\text{ con } p(t)=(\cos(2\pi t), \sen(2\pi t))\\
+            (\bb{S}^1, p_k)\text{ con } p_k(\cos(\theta), \sen(\theta)) = (\cos(k\theta), \sen(k\theta)) \text{ para todo } k\in \bb{Z}^+
         \end{gather*}
+
+        \item Vamos a estudiar ahora los recubridores del cilindro de $\bb{R}^3$, $B=\bb{S}^1\times \bb{R}$. Sabemos que
+        \begin{gather*}
+            \pi_1(\bb{S}^1\times \bb{R}, (1,0,0)) = \{[\alpha]^n : n\in \bb{Z}\} \cong \bb{Z}
+        \end{gather*}
+        por lo que tenemos de nuevo que los únicos subgrupos de $\bb{Z}$ son 
+        \begin{gather*}
+            H_k \cong k\bb{Z} \text{ donde } H_k = \{[\alpha]^{nk} : n\in \bb{Z}\} \text{ con } k\in \bb{Z}^+\\
+            H_0 \cong \{0\}
+        \end{gather*}
+        y además sabemos que $(\bb{R}^2, p_0)$ es recubridor del cilindro con
         \begin{align*}
-            p_0 : \bb{R}^2 &\to \bb{S}\times \bb{R}\\
+            p_0 : \bb{R}^2 &\to \bb{S}^1\times \bb{R}\\
             (x,y) & \mapsto (\cos(2\pi x), \sen(2\pi x), y)
         \end{align*}
         asociado a $H_0=\{[\veps_{(1,0,0)}]\}$.\\
 
-        Buscamos igual que antes la función $p_k$ para $k\in \bb{Z}^+$ dada por 
+        Buscamos ahora los recubridores cuyo subgrupo asociado es $H_k$.  Con la misma idea que en el ejemplo anterior definimos la función $p_k$ para $k\in \bb{Z}^+$ dada por 
         \begin{align*}
             p_k : \bb{S}^1 \times \bb{R} &\to \bb{S}^1 \times \bb{R}\\
             (\cos(\theta), \sen(\theta), y) &\mapsto (\cos(k\theta), \sen(k\theta), y)
@@ -745,6 +781,11 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \begin{gather*}
             p_{k*}([\alpha]) = [\alpha]^k\\
             p_{k*}(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,0))) = \{[\alpha]^{kn} : n\in \bb{Z}\} = H_k
+        \end{gather*}
+        Por tanto los únicos recubridores del cilindro $\bb{S}^1\times \bb{R}$ son 
+        \begin{gather*}
+            (\bb{R}^2, p_0) \text{ con } p_0(x,y) = (\cos(2\pi x), \sen(2\pi x), y)\\
+            (\bb{S}^1\times \bb{R}, p_k) \text{ con } p_k(\cos(\theta), \sen(\theta), y) = (\cos(k\theta), \sen(k\theta), y) \text{ para todo } k\in \bb{Z}^+
         \end{gather*}
 
         \item Veamos el caso del toro, $B=\bb{S}^1 \times \bb{S}^1$. Sabemos que 
