--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -734,7 +734,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \end{figure}%
         Para este recubridor $(\bb{R}, p)$ donde $p(t) = (\cos(2\pi t), \sen(2\pi t))$, su subgrupo asociado en $\pi_1(\bb{S}^1, (1,0))$ es $H_0$.\\
 
-        También podemos considerar el recubridor $(\bb{S}, p_1=Id_{\bb{S}^1})$ cuyo subgrupo asociado es $H_1 = \pi_1(\bb{S}^1, (1,0))$.\\
+        También podemos considerar el recubridor $(\bb{S}^1, p_1=Id_{\bb{S}^1})$ cuyo subgrupo asociado es $H_1 = \pi_1(\bb{S}^1, (1,0))$.\\
 
         Ahora nos planteamos de nuevo que $\bb{S}^1$ es recubridor de sí mismo pero que hay más formas de recubrirse, es decir, podemos encontrar funciones recubridoras $p_k$ con $k\in \bb{Z}^+$ de forma que todas recubran a la circunferencia pero ``enrollandola más'', es decir, llevando cada vuelta de $R=\bb{S}^1$ en $k$ vueltas de $B=\bb{S}^1$. Definimos así la aplicación $p_k$ para $k\geq 2$ (el caso $k=1$ es la identidad que ya se ha estudiado) dada por 
         \begin{align*}
@@ -790,25 +790,124 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
 
         \item Veamos el caso del toro, $B=\bb{S}^1 \times \bb{S}^1$. Sabemos que 
         \begin{gather*}
-            \pi_1(\bb{S}\times \bb{S}, (1,0,1,0)) \cong \bb{Z}\times \bb{Z}
+            \pi_1(\bb{S}^1\times \bb{S}^1, (1,0,1,0)) \cong \bb{Z}\times \bb{Z}
         \end{gather*}
         con generadores $[\alpha]$ y $[\beta]$.\\
 
         Consideramos el recubridor $(\bb{R}^2, p_0\times p_0)$ con 
         \begin{align*}
-            p_0\times p_0 : \bb{R}\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
+            p_0\times p_0 : \bb{R}^2 &\to \bb{S}^1 \times \bb{S}^1\\
             (x,y) & \mapsto (cos(2\pi x), \sen(2\pi x), \cos(2\pi y), \sen(2\pi y))
         \end{align*}
-        que tiene asociado al subgrupo trivial.\\
+        Como $\pi_1(\bb{R}^2, (0,0)) = [\veps_{(0,0)}]$ tenemos que 
+        \begin{gather*}
+            (p_0\times p_0)_*(\pi_1(\bb{R}^2, (0,0))) = \{[\veps_{(1,0,1,0)}]\}
+        \end{gather*}
+        por lo que $(\bb{R}^2, p_0\times p_0)$ es el recubridor asociado al subgrupo trivial de $\pi_1(\bb{S}^1\times \bb{S}^1, (1,0,1,0))$.\\
 
         Consideramos ahora el cilindro como recubridor y definimos la aplicación recubridora
         \begin{align*}
-            p_k\times p_0 : \bb{S}\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
+            p_k\times p_0 : \bb{S}^1\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
             (\cos(\theta), \sen(\theta), y) & \mapsto (cos(k\theta), \sen(k\theta), \cos(2\pi y), \sen(2\pi y))
         \end{align*}
-        que para cada $k\in \bb{Z}^+$ ``enrolla'' el cilindro $k$ veces. Es fácil ver que con esta definición tenemos que 
+        que para cada $k\in \bb{Z}^+$ ``enrolla'' el cilindro $k$ veces. 
+        En este caso tendríamos que 
         \begin{gather*}
-            (p_k \times p_0)_*([\gamma]) = [\alpha]^k \cong k\bb{Z}\times \{0\} = \{(kn,0) : n\in \bb{Z}\}
+            (p_k\times p_0)(1,0,0) = (1,0,1,0)
         \end{gather*}
+        y además tenemos que 
+        \begin{gather*}
+            \pi_1(\bb{S}^1 \times \bb{R}, (1,0,0)) = \{[\gamma]^n : n\in \bb{Z}\} \text{ donde } \gamma(t)=(\cos(2\pi t), \sen(2\pi t), 0)
+        \end{gather*}
+        Tenemos además que $(p_k\times p_0)(\gamma(t)) = (\cos(2k\pi t), \sen(2k\pi t), 1, 0)$ de donde se deduce que
+        \begin{gather*}
+            (p_k \times p_0)_*([\gamma]) = [(p_k\times p_0)(\gamma)]
+            = [\alpha]^k 
+        \end{gather*}
+        Una vez hemos calculado la imagen del generador podemos concluir que 
+        \begin{gather*}
+            (p_k\times p_0)_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,0))) = \{[\alpha]^{nk} : n\in \bb{Z}\} \cong k\bb{Z}\times \{0\} \leq \bb{Z} \times \bb{Z}
+        \end{gather*}
+        Análogamente si consideramos 
+        \begin{align*}
+            p_0\times p_k : \bb{R}\times \bb{S}^1 &\to \bb{S}^1 \times \bb{S}^1\\
+            (x,  \cos(\theta), \sen(\theta)) & \mapsto (\cos(2\pi x), \sen(2\pi x), cos(k\theta), \sen(k\theta))
+        \end{align*}
+        tendríamos el siguiente recubridor
+        \begin{gather*}
+            (\bb{R}\times \bb{S}^1, p_0\times p_k) \text{ asociado a } \{0\}\times k\bb{Z} \leq \bb{Z}\times \bb{Z}
+        \end{gather*}
+        Consideramos ahora el toro como recubridor de sí mismo y definimos
+        \begin{align*}
+            p_k\times p_l : \bb{S}^1\times \bb{S}^1 &\to \bb{S}^1 \times \bb{S}^1\\
+            (\cos(\theta), \sen(\theta), \cos(\varphi), \sen(\varphi)) & \mapsto (cos(k\theta), \sen(k\theta), \cos(l \varphi), \sen(l\varphi))
+        \end{align*}
+        Si estudiamos la imagen de los generadores tenemos 
+        \begin{gather*}
+            (p_k\times p_l)_*([\alpha]) = [\alpha]^k\\
+            (p_k\times p_l)_*([\beta]) = [\beta]^k
+        \end{gather*}
+        y llegamos a que $(\bb{S}^1 \times \bb{S}^1, p_k\times p_l)$ es recubridor y está asociado al subgrupo $k\bb{Z}\times l\bb{Z}$. El grupo imagen sería
+        \begin{gather*}
+            \{[\alpha]^{kn_1}\ast [\beta]^{ln_2} : n_1,n_2\in \bb{Z}\}
+        \end{gather*}
+        En este punto nos damos cuenta de que aún no hemos estudiado todos los subgrupos de $\bb{Z}\times \bb{Z}$. Si consideramos 2 puntos de $\bb{Z}$ podemos generar un subgrupo a partir de ellos, por ejemplo, para $(1,3), (2,4)\in \bb{Z}\times \bb{Z}$ podemos construir $\{a(1,3)+b(2,4) : a,b\in \bb{Z}\}$ y es un subgrupo de $\bb{Z}\times \bb{Z}$. Esto también ocurre con un solo generador. Pensamos ahora entonces en la siguiente aplicación
+
+        \Func{p'}{\bb{S}^1\times \bb{R}}{\bb{S}^1\times \bb{S}^1}
+        {(cos(\theta), \sen(\theta), y)}{(\cos(\theta), \sen(\theta), \cos(\theta+y), \sen(\theta+y))}
+
+        Nos planteamos ahora quién sería $p'_*([\gamma])$. Aplicamos $p'$ en un generador y tenemos
+        \begin{gather*}
+            p'(\gamma(t)) = p(\cos(2\pi t), \sen(2\pi t), 0) = (\cos(2\pi t), \sen(2\pi t), \cos(2\pi t), \sen(2\pi t))
+        \end{gather*}
+        Intuitivamente podemos llegar a ver que $p'_*([\gamma]) = [\alpha] \ast [\beta]$.
+        Esto se ha hecho para el generador $(1,1)$ pero para cualquier generador $(a,b)\in \bb{Z}\times \bb{Z}$ se puede construir una aplicación $p'_{(a,b)}$ para cada $(a,b)\in \bb{Z}\times \bb{Z}$ de la siguiente forma:
+        
+        \Func{p'_{(a,b)}}{\bb{S}^1 \times \bb{R}}{\bb{S}^1\times \bb{S}^1}
+        {(cos(\theta), \sen(\theta), y)}{(\cos(a\theta), \sen(a\theta), \cos(b\theta+y), \sen(b\theta+y))}
+
+        Aplicando $p'_{(a,b)}$ en el generador tenemos
+        \begin{gather*}
+            p'_{(a,b)}(\gamma(t)) = p'(\cos(2\pi t), \sen(2\pi t), 0) = (\cos(2a\pi t), \sen(2a\pi t), \cos(2b\pi t), \sen(2b\pi t))
+        \end{gather*}
+
+        y con mucha intuición se puede llegar a que 
+        \begin{gather*}
+            (p'_{(a,b)})_*([\gamma]) = [\alpha]^a \ast [\beta]^b
+        \end{gather*}
+
+        Por tanto tenemos que $(\bb{S}^1 \times \bb{R}, p'_{(a,b)})$ es recubridor del toro con subgrupo asociado $\{n(a,b) : n\in \bb{Z}\}$.\\
+
+        De hecho, si tomamos un par de generadores $(a,b), (c,d)\in \bb{Z}\times \bb{Z}$ podemos definir la aplicación $p'_{(a,b)}\times p'_{(c,d)}: \bb{S}^1 \times \bb{S}^1 \to \bb{S}^1 \times \bb{S}^1$ dada por 
+        \begin{gather*}
+            (p'_{(a,b)}\times p'_{(c,d)})(\cos(\theta), \sen(\theta), \cos(\varphi), \sen(\varphi)) =\\
+            = (\cos(a\theta + c\varphi), \sen(a\theta + c\varphi), \cos(b\theta + d\varphi), \cos(b\theta + d\varphi))
+        \end{gather*}
+        De esta forma, aplicando $p'_{(a,b)}\times p'_{(c,d)}$ en los generadores tenemos
+        \begin{align*}
+            (p'_{(a,b)}\times p'_{(c,d)})(\alpha(t)) &= (p'_{(a,b)}\times p'_{(c,d)})(\cos(2\pi t), \sen(2\pi t), 1, 0) =\\
+            &= (p'_{(a,b)}\times p'_{(c,d)})(\cos(2\pi t), \sen(2\pi t), \cos(0), \sen(0)) =\\
+            &= (\cos(2a\pi t), \sen(2a\pi t), \cos(2b\pi t), \sen(2b\pi t))\\\\
+            (p'_{(a,b)}\times p'_{(c,d)})(\beta(t)) &= (p'_{(a,b)}\times p'_{(c,d)})(1, 0, \cos(2\pi t), \sen(2\pi t)) =\\
+            &= (p'_{(a,b)}\times p'_{(c,d)})(\cos(0), \sen(0), \cos(2\pi t), \sen(2\pi t)) =\\
+            &= (\cos(2c\pi t), \sen(2c\pi t), \cos(2d\pi t), \sen(2d\pi t))
+        \end{align*}
+        Por lo que de nuevo usando mucho la intuición (habría que demostrarlo formalmente) llegamos a que
+        \begin{gather*}
+            (p'_{(a,b)}\times p'_{(c,d)})_*([\alpha]) = [\alpha]^a \ast [\beta]^b\\
+            (p'_{(a,b)}\times p'_{(c,d)})_*([\beta]) = [\alpha]^c \ast [\beta]^d
+        \end{gather*}
+        y tenemos que $(\bb{S}^1 \times \bb{S}^1, p'_{(a,b)}\times p'_{(c,d)})$ es recubridor del toro asociado al subgrupo $\{n_1(a,b) + n_2(c,d) : n_1,n_2\in \bb{Z}\}$.\\
+
+        Resumiendo, tenemos que todos los recubridores del toro $\bb{S}^1\times \bb{S}^1$ son 
+        \begin{gather*}
+            (\bb{R}^2, p_0\times p_0) \text{ asociado a } \{0\}\\
+            (\bb{S}^1\times \bb{R}, p_k\times p_0) \text{ asociado a }k\bb{Z} \times \{0\} \text{ para cada } k\in \bb{Z}\\
+            (\bb{R}\times \bb{S}^1, p_0\times p_k) \text{ asociado a } \{0\}\times k\bb{Z} \text{ para cada } k\in \bb{Z}\\
+            (\bb{S}^1 \times \bb{S}^1, p_k\times p_l) \text{ asociado a } k\bb{Z}\times l\bb{Z} \text{ para cada } k,l\in \bb{Z}\\
+            (\bb{S}^1\times \bb{R}, p'_{(a,b)}) \text{ asociado a } \{n(a,b) : n\in \bb{Z}\} \text{ para cada } (a,b)\in \bb{Z}\times \bb{Z}\\
+            (\bb{S}^1\times \bb{R}, p'_{(a,b)}\times p'_{(c,d)}) \text{ asociado a } \{n_1(a,b) + n_2(c,d) : n_1,n_2\in \bb{Z}\}\\ \text{ para cada } (a,b),(c,d)\in \bb{Z}\times \bb{Z}
+        \end{gather*}
+        Como $\bb{Z}\times \bb{Z}$ no tiene más subgrupos estos serán todos los recubridores del toro.
     \end{enumerate}
 \end{ejemplo}
